--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div style="margin-left: auto; margin-right: auto; margin-top: 10px; text-align: center;">
       <button onclick="shuffle()" type="button" id="shuffle-button" style="width: 200px;">Shuffle</button>
       <button onclick="solve(state)" type="button" id="solve-button" style="width: 200px;">Solve (Breadth First)</button>
-      <button onclick="solve(state)" type="button" id="solve-button" style="width: 200px;">Solve (A*)</button>
+      <button onclick="solveAStar(state)" type="button" id="solve-button" style="width: 200px;">Solve (A*)</button>
     </div>
+    <script src="tinyqueue.js"></script>
     <script src="js/tile.js"></script>
     <script src="js/game.js"></script>
   </body>
